# cli-common

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PROFILES.md  README.md  conformance.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
crates/example-cli/: Cargo.toml
crates/example-cli/src/: main.rs
crates/pk-cli-auth/: Cargo.toml
crates/pk-cli-auth/src/: lib.rs
crates/pk-cli-config/: Cargo.toml
crates/pk-cli-config/src/: lib.rs
crates/pk-cli-core/: Cargo.toml
crates/pk-cli-core/src/: args.rs  dates.rs  error.rs  info.rs  lib.rs  money.rs  output.rs
crates/pk-cli-http/: Cargo.toml
crates/pk-cli-http/src/: lib.rs
crates/pk-cli-secrets/: Cargo.toml
crates/pk-cli-secrets/src/: lib.rs
crates/pk-cli-selfupdate/: Cargo.toml
crates/pk-cli-selfupdate/src/: lib.rs
crates/pk-cli-utility/: Cargo.toml
crates/pk-cli-utility/src/: lib.rs
scripts/: dev-sign.sh  setup-dev-signing.sh
