[workspace]
resolver = "2"
members = [
    "crates/pk-cli-core",
    "crates/pk-cli-secrets",
    "crates/pk-cli-config",
    "crates/pk-cli-selfupdate",
    "crates/pk-cli-auth",
    "crates/pk-cli-http",
    "crates/example-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/piekstra/cli-common"
homepage = "https://github.com/piekstra/cli-common"
authors = ["piekstra"]

[workspace.dependencies]
pk-cli-core = { path = "crates/pk-cli-core", version = "0.1.2" }
pk-cli-secrets = { path = "crates/pk-cli-secrets", version = "0.1.2" }
pk-cli-config = { path = "crates/pk-cli-config", version = "0.1.2" }
pk-cli-selfupdate = { path = "crates/pk-cli-selfupdate", version = "0.1.2" }
pk-cli-auth = { path = "crates/pk-cli-auth", version = "0.1.2" }
pk-cli-http = { path = "crates/pk-cli-http", version = "0.1.2" }

clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7"
zeroize = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "cookies", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
self-replace = "1"
keyring = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
