[package]
name = "pk-cli-http"
description = "HTTP plumbing for the piekstra CLI family: blocking client builder with sane defaults, raw `api` passthrough command."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
pk-cli-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
