[package]
name = "pk-cli-selfupdate"
description = "GitHub-release self-update for the piekstra CLI family: --check, atomic in-place replace, self-update/v1 JSON DTO."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
pk-cli-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
self-replace = { workspace = true }
