[package]
name = "pk-cli-utility"
description = "Utility-domain profile (utility/v1) for the piekstra CLI family: summary/statement/payment/usage/transaction DTOs, Paged lists, shared range flags."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
pk-cli-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
